--- a/kooplexhub/report/templates/report_layout.html
+++ b/kooplexhub/report/templates/report_layout.html
@@ -13,19 +13,20 @@
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
 	{% if user.is_authenticated %}
-        <li class="ms-3 nav-item text-center">
-          <a data-toggle="tooltip" title="New report" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:new' %}"><i class="bi bi-bag-plus"></i><span class="d-none d-sm-block">&nbsp;New</span></a>
+  <li class="ms-3 nav-item text-center">
+    <a data-toggle="tooltip" title="New report" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:new' %}"><i class="bi bi-bag-plus"></i><span class="d-none d-md-block">&nbsp;New</span></a>
         </li>
         {% endif %}
         <li class="ms-3 nav-item text-center">
-          <a data-toggle="tooltip" title="List report" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:list' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-sm-block">&nbsp;List report</span></a>
+          <a data-toggle="tooltip" title="List report" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active active border-2 border-bottom{% endif %}" href="{% url 'report:list' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-md-block">&nbsp;List report</span></a>
         </li>
 </ul>
 {% endblock %}
 
+
 {% block bodycontent %}
-<div class="container mt-4">
-{% block realcontent %}
+<div class="m-2" style="height: calc(100vh - 105px); overflow-y: scroll; overflow-x:hidden;">
+  {% block realcontent %}
   <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
     <h6 class="card-title">Nothing interesting</h6>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
