--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -25,6 +25,7 @@
 {% endblock %}
 
 {% block realcontent %}
+<div class="m-2" style="height: calc(100vh - 105px); overflow-y: scroll; overflow-x:hidden;">
 <div class="card shadow p-3 mb-5 bg-light rounded">
 <form id="container-manage" class="form-horizontal" action="{% url 'container:configure_save' %}" method="post">
 {% csrf_token %}
@@ -146,5 +147,6 @@ $("select[name='image'").change(function() {
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
 
+</div>
 {% endblock %}
 
